Created splash page

--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0b1/jquery.mobile-1.0b1.min.js"></script>
 </head> 
 <body> 
-
-<div data-role="page">
+<!-- Start of splash page -->
+<div data-role="page" id="splash">
 
 	<div data-role="header">
-		<h1>Page Title</h1>
+		<h1>Welcome to BOWL BOUND</h1>
 	</div><!-- /header -->
 
 	<div data-role="content">	
-		<p>Page content goes here.</p>		
+		<p><a href="#kickoff">Play!</a></p>		
 	</div><!-- /content -->
 
-	<div data-role="footer">
-	</div><!-- /footer -->
 </div><!-- /page -->
 
 </body>
