--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0b1/jquery.mobile-1.0b1.min.js"></script>
 </head> 
 <body> 
-<!-- Start of splash page -->
+<!-- Splash page -->
 <div data-role="page" id="splash">
 
 	<div data-role="header">
