Added kickoff, return, and return option pages.

--- a/index.html
+++ b/index.html
@@ -20,5 +20,44 @@
 
 </div><!-- /page -->
 
+<!-- Kickoff page -->
+<div data-role="page" id="kickoff">
+
+	<div data-role="header">
+		<h1>Kickoff</h1>
+	</div><!-- /header -->
+
+	<div data-role="content">	
+		<p><a href="#return-option">Kick!</a></p>		
+	</div><!-- /content -->
+
+</div><!-- /page -->
+
+<!-- Return Option page -->
+<div data-role="page" id="return-option">
+
+	<div data-role="header">
+		<h1>Return Choice</h1>
+	</div><!-- /header -->
+
+	<div data-role="content">
+		<p><a href="#return">Return</a>|<a href="#touchback">Touchback</a></p>		
+	</div><!-- /content -->
+
+</div><!-- /page -->
+
+<!-- Return page -->
+<div data-role="page" id="return">
+
+	<div data-role="header">
+		<h1>Return</h1>
+	</div><!-- /header -->
+
+	<div data-role="content">
+		<p>You returned the ball.</p>		
+	</div><!-- /content -->
+
+</div><!-- /page -->
+
 </body>
 </html>
