Added a choose offense dialog box.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	</div><!-- /header -->
 
 	<div data-role="content">
-		<p><a href="#return">Return</a>|<a href="#touchback">Touchback</a></p>		
+		<p><a href="#return">Return</a>|<a href="#main">Touchback</a></p>		
 	</div><!-- /content -->
 
 </div><!-- /page -->
@@ -55,6 +55,28 @@
 
 	<div data-role="content">
 		<p>You returned the ball.</p>		
+	</div><!-- /content -->
+
+</div><!-- /page -->
+
+<!-- Main page -->
+<div data-role="page" id="main">
+
+	<div data-role="header">
+		<h1>Main</h1>
+	</div><!-- /header -->
+
+	<div data-role="content">
+		<p><a href="#offense" data-rel="dialog">Choose a play!</a></p>
+	</div><!-- /content -->
+
+</div><!-- /page -->
+
+<!-- Offense page -->
+<div data-role="page" id="offense">
+
+	<div data-role="content">
+    <a href="/#main" data-role="button">Line Plunge</a>
 	</div><!-- /content -->
 
 </div><!-- /page -->
