Added defensive dialog box

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 	</div><!-- /header -->
 
 	<div data-role="content">
-		<p><a href="#offense" data-rel="dialog">Choose a play!</a></p>
+		<p><a href="#offense" data-rel="dialog">Choose an offensive play!</a></p>
+		<p><a href="#defense" data-rel="dialog">Choose an defensive play!</a></p>
 	</div><!-- /content -->
 
 </div><!-- /page -->
@@ -80,6 +81,16 @@
 	</div><!-- /content -->
 
 </div><!-- /page -->
+
+<!-- Defense page -->
+<div data-role="page" id="defense">
+
+	<div data-role="content">
+    <a href="/#main" data-role="button">Blitz</a>
+	</div><!-- /content -->
+
+</div><!-- /page -->
+
 
 </body>
 </html>
