--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 	<div data-role="content">
 		<p><a href="#offense" data-rel="dialog">Choose an offensive play!</a></p>
-		<p><a href="#defense" data-rel="dialog">Choose an defensive play!</a></p>
+		<p><a href="#defense" data-rel="dialog">Choose a defensive play!</a></p>
 	</div><!-- /content -->
 
 </div><!-- /page -->
