Added dice page

--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
 
 </div><!-- /page -->
 
+<!-- Dice page -->
+<div data-role="page" id="dice">
+
+	<div data-role="content">
+    <p>Offense:</p>
+    <p>Defense:</p>
+	</div><!-- /content -->
+
+</div><!-- /page -->
 
 </body>
 </html>
