Adding a permanent header

--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0b1/jquery.mobile-1.0b1.min.js"></script>
 </head> 
-<body> 
+<body>
+
+	
+	
+	
 <!-- Splash page -->
 <div data-role="page" id="splash">
 
 	<div data-role="header">
-		<h1>Welcome to BOWL BOUND</h1>
+	<div id="score">0-0</div>
+	<div id="poss">MICH</div>
+	<div id="location">50</div>
+
 	</div><!-- /header -->
 
 	<div data-role="content">	
