Added hostory link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div id="score">0-0</div>
 	<div id="poss">MICH</div>
 	<div id="location">50</div>
-
+    <a href="#history">HISTORY</a>
 	</div><!-- /header -->
 
 	<div data-role="content">	
