Dialogs need a header.

--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
 <!-- Defense page -->
 <div data-role="page" id="defense">
 
+	<div data-role="header">
+    <h1>Dude</h1>
+	</div><!-- /header -->
+
 	<div data-role="content">
     <a href="/#main" data-role="button">Blitz</a>
 	</div><!-- /content -->
