Adding quarter and clock.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	<div id="score">0-0</div>
 	<div id="poss">MICH</div>
 	<div id="location">50</div>
+	<div id="clock">15:00</div>
+	<div id="quarter">4th</div>
     <a href="#history">HISTORY</a>
 	</div><!-- /header -->
 
